--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <ul>
             <li><a href="#about">Студия</a></li>
             <li><a href="#clients">Клиенты</a></li>
-            <li><a href="#shop">Магазин</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
             <li><a href="#contacts">Контакты</a></li>
           </ul>
         </nav>
@@ -163,7 +163,7 @@
 
     </main>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+  
 
   </body>
 </html>
