Стилизация главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Нёрдс</title>
   </head>
-  <body>
-    <header>
+  <body class="page-body">
+    <header class="main-header">
       
-        <a href="index.html">
+        <a class="main-header-logo" href="index.html">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="logotype"> 
         </a>
-        <nav>
-          <ul>
+        <nav class="main-navigation">
+          <ul class="site-navigation">
             <li><a href="#about">Студия</a></li>
             <li><a href="#clients">Клиенты</a></li>
             <li><a href="#shop">Магазин</a></li>
             <li><a href="#contacts">Контакты</a></li>
           </ul>
         </nav>
-      <a href="blank.html">Корзина</a>
+      <a class="basket-link" href="blank.html">Корзина</a>
     </header>
 
-    <main>
+    <main class="main-page">
         <h1>Магазин готовых шаблонов</h1>
 
         <section>
