--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html class="page" lang="ru">
 
 <head>
-	<meta charset="utf-8">
-	<title>Нёрдс</title>
+  <meta charset="utf-8">
+  <title>Нёрдс</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="normalize.css" rel="stylesheet">
@@ -11,180 +11,182 @@
 </head>
 
 <body class="page-body">
-  <div class="index-columns">
-	<header class="main-header">
+<div class="index-columns">
+  <header class="main-header">
 
-		<a class="main-header-logo">
-			<img src="img/nerds-logo.svg" width="160" height="65" alt="logotype">
-		</a>
-		<nav class="main-navigation">
-			<ul class="site-navigation">
-				<li><a class="menu" href="#about">Студия</a></li>
-				<li><a class="menu" href="#clients">Клиенты</a></li>
-				<li><a class="menu" href="catalog.html">Магазин</a></li>
-				<li><a class="menu" href="#contacts">Контакты</a></li>
-			</ul>
-		</nav>
+    <a class="main-header-logo">
+      <img src="img/nerds-logo.svg" width="160" height="65" alt="logotype">
+    </a>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
+        <li><a href="#about">Студия</a></li>
+        <li><a href="#clients">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="#contacts">Контакты</a></li>
+      </ul>
+    </nav>
     <img src="img/cart-icon.svg" width="15" height="15" alt="cart-icon">
-		<a class="basket-link" href="blank.html">Корзина</a>
-	</header>
+    <a class="basket-link" href="blank.html">Корзина</a>
+  </header>
 
-	<main class="main-page">
+  <main class="main-page">
 
-		<h1>Дизайн-студия Нёрдс</h1>
+    <h1>Дизайн-студия Нёрдс</h1>
 
-		<section class="main-slider-image">
-			<figure>
-				<a href="#"></a>
-				<img src="img/nerds-index-slide1 1.png" width="1157" height="431">
-			</figure>
-		</section>
+    <section class="main-slider-image">
+      <figure>
+        <a href="#"></a>
+        <img src="img/nerds-index-slide1 1.png" width="1157" height="431">
+      </figure>
+    </section>
 
-		<section class="slider-button">
-			<button class="slider-button-1" type="button" disabled>1</button>
-			<button class="slider-button-2" type="button">2</button>
-			<button class="slider-button-3" type="button">3</button>
-		</section>
+    <section class="slider-button">
+      <button class="slider-button-1" type="button" disabled>1</button>
+      <button class="slider-button-2" type="button">2</button>
+      <button class="slider-button-3" type="button">3</button>
+    </section>
 
-		<section class="main-welcome-box">
-			<h2>Долго, дорого,<br>
-				скрупулезно.</h2>
-			<p>Математически выверенный дизайн<br>
-				для вашего сайта или мобильного приложения.</p>
-			<button class="button-red" type="button"><div class="textButton">Узнать больше</div></button>
-		</section>
-  </div>
+    <section class="main-welcome-box">
+      <h2>Долго, дорого,<br>
+        скрупулезно.</h2>
+      <p>Математически выверенный дизайн<br>
+        для вашего сайта или мобильного приложения.</p>
+      <button class="button-red" type="button">
+        <div class="textButton">Узнать больше</div>
+      </button>
+    </section>
+</div>
 
-		<section class="services" id="shop">
-			<ul class="services-list">
-				<li class="services-item">
-					<img src="img/illustration-1 1.jpg" width="300" height="146" alt="Картинка с веб-сайтом">
-					<h4>Веб-сайты</h4>
-					<p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
-					<button class="button-red" type="button"><div class="textButton">Заказать</div></button>
-				</li>
-				<li class="services-item">
-					<img src="img/illustration-2 1.jpg" width="300" height="146" alt="Картинка с приложением">
-					<h4>Приложения</h4>
-					<p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
-					<button class="button-green" type="button"><div class="textButton">Заказать</div></button>
-				</li>
-				<li class="services-item">
-					<img src="img/illustration-3 1.jpg" width="300" height="146" alt="Картинка с презентацией">
-					<h4>Презентации</h4>
-					<p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
-					<button class="button-yellow" type="button"><div class="textButton">Заказать</div></button>
-				</li>
-			</ul>
-		</section>
+<section class="services" id="shop">
+  <ul class="services-list">
+    <li class="services-item">
+      <img src="img/illustration-1 1.jpg" width="300" height="146" alt="Картинка с веб-сайтом">
+      <h4>Веб-сайты</h4>
+      <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+      <button class="button-red" type="button">
+        <div class="textButton">Заказать</div>
+      </button>
+    </li>
+    <li class="services-item">
+      <img src="img/illustration-2 1.jpg" width="300" height="146" alt="Картинка с приложением">
+      <h4>Приложения</h4>
+      <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
+      <button class="button-green" type="button">
+        <div class="textButton">Заказать</div>
+      </button>
+    </li>
+    <li class="services-item">
+      <img src="img/illustration-3 1.jpg" width="300" height="146" alt="Картинка с презентацией">
+      <h4>Презентации</h4>
+      <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+      <button class="button-yellow" type="button">
+        <div class="textButton">Заказать</div>
+      </button>
+    </li>
+  </ul>
+</section>
 
-		<section class="about" id="about">
-			<h3 class="about-title">Мы — маленькая, но гордая<br>
-				дизайн-студия из Краснодара.</h3>
-			<p class="about-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
-				превыше креатива. Работаем не покладая рук, как роботы.</p>
-			<br>
-			<h5 class="about-title-list">Выполняем заказы на разработку:</h5>
-			<ul class="about-list">
-				<li class="about-item">Веб-сайтов любой сложности</li>
-				<li class="about-item">Мобильных приложений для iOS и Android</li>
-				<li class="about-item"> Слайдшоу и видео для корпоративных презентаций</li>
-			</ul>
-		</section>
+<section class="about" id="about">
+  <h3 class="about-title">Мы — маленькая, но гордая<br>
+    дизайн-студия из Краснодара.</h3>
+  <p class="about-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+    превыше креатива. Работаем не покладая рук, как роботы.</p>
+  <br>
+  <h5 class="about-title-list">Выполняем заказы на разработку:</h5>
+  <ul class="about-list">
+    <li class="about-item">Веб-сайтов любой сложности</li>
+    <li class="about-item">Мобильных приложений для iOS и Android</li>
+    <li class="about-item"> Слайдшоу и видео для корпоративных презентаций</li>
+  </ul>
+</section>
 
-		<section>
-			<img class="logo-new" src="img/nerds-illustration 1.png" width="360" height="208" alt="">
-			<h5 class="about-title-list">с 2004 года Любим точность во всем:</h5>
-			<ul class="about-title-list2">
-				<li>
-					<h6 class="number1">146</h6>
-					<p class="percent">%</p>
-					<p>Уровень<br>
-						самоотдачи</p>
-				</li>
-				<li>
-					<h6 class="number2">100</h6>
-					<p class="percent">%</p>
-					<p>Соблюдение<br>
-						сроков</p>
-				</li>
-				<li>
-					<h6 class="number3">50</h6>
-					<p class="percent">%</p>
-					<p>Минимальная<br>
-						предоплата</p>
-				</li>
-			</ul>
-		</section>
+<section>
+  <img class="logo-new" src="img/nerds-illustration 1.png" width="360" height="208" alt="">
+  <h5 class="about-title-list">с 2004 года Любим точность во всем:</h5>
+  <ul class="about-title-list2">
+    <li>
+      <h6 class="number1">146</h6>
+      <p class="percent">%</p>
+      <p>Уровень<br>
+        самоотдачи</p>
+    </li>
+    <li>
+      <h6 class="number2">100</h6>
+      <p class="percent">%</p>
+      <p>Соблюдение<br>
+        сроков</p>
+    </li>
+    <li>
+      <h6 class="number3">50</h6>
+      <p class="percent">%</p>
+      <p>Минимальная<br>
+        предоплата</p>
+    </li>
+  </ul>
+</section>
 
-		<section id="clients">
+<section id="clients">
 
-			<ul class="clients-list">
-				<li class="clients-logo"><img src="img/logo_htmlacademy 2.svg" width="199" height="57" alt="logo1">
-				<li class="clients-logo"><img src="img/logo-2 2.svg" width="209" height="90" alt="logo2"></li>
-				<li class="clients-logo"><img src="img/logo-3 2.svg" width="185" height="52" alt="logo3"> </li>
-				<li class="clients-logo"><img src="img/logo-4 2.svg" width="173" height="84" alt="logo4"></li>
-			</ul>
+  <ul class="clients-list">
+    <li class="clients-logo"><img src="img/logo_htmlacademy 2.svg" width="199" height="57" alt="logo1">
+    <li class="clients-logo"><img src="img/logo-2 2.svg" width="209" height="90" alt="logo2"></li>
+    <li class="clients-logo"><img src="img/logo-3 2.svg" width="185" height="52" alt="logo3"></li>
+    <li class="clients-logo"><img src="img/logo-4 2.svg" width="173" height="84" alt="logo4"></li>
+  </ul>
 
-		</section>
+</section>
 
-		<section class="contacts-box" id="contacts">
-			<h6>NЁRDS DESIGN STUDIO</h6>
-			<p>наб. Реки Карповки,<br>
-				5 лит П, Санкт-Петербург<br>
-				<a class="contacts-phone" href="tel:+78005558628"></a>+7 800 555-86-28
-			</p>
-			<button class="button-red" type="button">Напишите нам</button>
+<section class="contacts-box" id="contacts">
+  <h6>NЁRDS DESIGN STUDIO</h6>
+  <p>наб. Реки Карповки,<br>
+    5 лит П, Санкт-Петербург<br>
+    <a class="contacts-phone" href="tel:+78005558628"></a>+7 800 555-86-28
+  </p>
+  <button class="button-red" type="button">Напишите нам</button>
 
-			<img src="img/map 1.png" width="1440" height="416" alt="">
-			<img src="img/map-marker 1.png" width="231" height="190" alt="">
+  <img src="img/map 1.png" width="1440" height="416" alt="">
+  <img src="img/map-marker 1.png" width="231" height="190" alt="">
 
-		</section>
+</section>
 
-		<footer>
+<footer>
 
-			<section class="main-footer">
-				<ul class="footer-social">
-					<li>
+  <section class="main-footer">
+    <ul class="footer-social">
+      <li>
+        <div class="iconSocial circleBase">
+          <a href="#">
+            <img src="img/vk-icon.svg" width="26" height="15">
+          </a>
+        </div>
+      </li>
+      <li>
+        <div class="iconSocial circleBase">
+          <a href="#">
+            <img src="img/fb-icon.svg" width="12" height="22">
+          </a>
+        </div>
+      </li>
+      <li>
+        <div class="iconSocial circleBase">
+          <a href="#">
+            <img src="img/insta-icon.svg" width="21" height="21">
+          </a>
+        </div>
+      </li>
+    </ul>
+  </section>
 
-						<a class="social-button-vk" href="#">
-              <div class="iconSocial circleBase">
-							<img class="social-button-vk" src="img/vk-icon.svg" width="26" height="15">
-            </div>
-						</a>
+  <section class="footer-goodbuy">
+    <h8>Давайте дружить, это выгодно!</h8>
+    <p>Скидка 10% для друзей из социальных сетей.</p>
 
+  </section>
 
-					</li>
-					<li>
-						<a class="social-button-fb" href="#">
-              <div class="iconSocial circleBase">
-							<img class="social-button-fb" src="img/fb-icon.svg" width="12" height="22">
-            </div>
-						</a>
-            </li>
-
-					</li>
-					<li>
-						<a class="social-button-insta" href="#">
-              <div class="iconSocial circleBase">
-							<img class="social-button-insta" src="img/insta-icon.svg" width="21" height="21">
-            </div>
-						</a>
-					</li>
-				</ul>
-			</section>
-
-			<section class="footer-goodbuy">
-				<h8>Давайте дружить, это выгодно!</h8>
-				<p>Скидка 10% для друзей из социальных сетей.</p>
-
-			</section>
-
-		</footer>
+</footer>
 
 
-	</main>
-
+</main>
 
 
 </body>
