Стилизация внутренней страницы
Надо еще поработать над фильтрами, пока не могу понять, как их оформить более похожими на дизайн )

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a class="main-header-logo">
       <img src="img/nerds-logo.svg" width="160" height="65" alt="logotype">
     </a>
+    <div class="main-navigation-wrapper">
     <nav class="main-navigation">
       <ul class="site-navigation">
         <li><a href="#about">Студия</a></li>
@@ -25,8 +26,11 @@
         <li><a href="#contacts">Контакты</a></li>
       </ul>
     </nav>
-    <img src="img/cart-icon.svg" width="15" height="15" alt="cart-icon">
-    <a class="basket-link" href="blank.html">Корзина</a>
+    </div>
+    <div class="basket-navigation">
+      <img src="img/cart-icon.svg" width="15" height="15" alt="cart-icon">
+      <a class="basket-link" href="blank.html">Корзина</a>
+    </div>
   </header>
 
   <main class="main-page">
@@ -86,6 +90,8 @@
   </ul>
 </section>
 
+<div class=".about-columns">
+
 <section class="about" id="about">
   <h3 class="about-title">Мы — маленькая, но гордая<br>
     дизайн-студия из Краснодара.</h3>
@@ -124,6 +130,8 @@
     </li>
   </ul>
 </section>
+</div>
+
 
 <section id="clients">
 
