--- a/catalog.html
+++ b/catalog.html
@@ -8,11 +8,15 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body class="page-body">
+    <div class="index-columns">
     <header class="main-header">
+
 
         <a class="main-header-logo" href="index.html">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="logotype">
         </a>
+
+
         <nav class="main-navigation">
           <ul class="site-navigation">
             <li><a href="#about">Студия</a></li>
@@ -21,27 +25,30 @@
             <li><a href="#contacts">Контакты</a></li>
           </ul>
         </nav>
-        <img src="img/cart-icon.svg" width="15" height="15" alt="cart-icon">
-      <a class="basket-link" href="blank.html">Корзина</a>
+          <img src="img/cart-icon.svg" width="15" height="15" alt="cart-icon">
+          <a class="basket-link" href="blank.html">Корзина</a>
+
     </header>
 
     <main class="main-page">
         <h1>Магазин готовых шаблонов</h1>
+      </div>
 
-        <section>
+        <section class="FilterPrice">
             <h2>Фильтр товаров</h2>
             <form method="get" action="">
                 <fieldset>
                     <legend>Cтоимость</legend>
-                    <label for="from">От</label>
-                    <input type="text" name="from" id="from">
-                    <label for="before">До</label>
-                    <input type="text" name="before" id="before">
-
+                    <div class="fromBefore">
+                      <label for="from">От</label>
+                      <input type="text" name="from" id="from">
+                      <label for="before">До</label>
+                      <input type="text" name="before" id="before">
+                  </div>
                 </fieldset>
 
 
-                <fieldset>
+                <fieldset class="FilterGrid">
                     <legend>Сетка</legend>
                     <ul>
                         <li>
@@ -58,7 +65,8 @@
                         </li>
                     </ul>
                 </fieldset>
-                <fieldset>
+
+                <fieldset class="FilterFeatures">
                     <legend>Особенности</legend>
                     <ul>
                         <li>
@@ -83,11 +91,11 @@
                         </li>
                     </ul>
                 </fieldset>
-                <button type="submit">Показать</button>
+                <button class="buttonSubmit" type="submit">Показать</button>
             </form>
         </section>
 
-        <section>
+        <section class="filterSort">
             <h3>Сортировать</h3>
             <ul>
                 <li><button type="button">По цене</button></li>
@@ -98,11 +106,11 @@
             </ul>
         </section>
 
-        <section>
-            <h2>Список шаблонов сайтов</h2>
+        <section class="templates">
+            <!-- <h2>Список шаблонов сайтов</h2> -->
             <ul>
                 <li>
-                    <a href="product.html">
+                    <a href="#">
                         <h3>Sedona</h3>
                         <p>
                             <img src="img/img-sedona 1.png" width="359" height="578" alt="Шаблон Седона">
@@ -112,7 +120,7 @@
                         Информационный сайт <br>
                         для туристов
                     </p>
-                        <button type="button">9 900 руб</button>
+                        <button type="button"><div class="textButton">9 900 руб</div></button>
 
                 </li>
                 <li>
@@ -127,7 +135,7 @@
                         приложения для iOS и Android
                     </p>
 
-                        <button type="button">9 900 руб</button>
+                        <button type="button"><div class="textButton">9 900 руб</div></button>
 
                 </li>
                 <li>
@@ -142,7 +150,7 @@
                         Для мужчин, да.
                     </p>
 
-                        <button type="button">9 900 руб</button>
+                    <button type="button"><div class="textButton">9 900 руб</div></button>
 
                 </li>
                 <li>
@@ -157,7 +165,7 @@
                         вязаных игрушек
                     </p>
 
-                        <button type="button">9 900 руб</button>
+                        <button type="button"><div class="textButton">9 900 руб</div></button>
 
                 </li>
                 <li>
@@ -172,7 +180,7 @@
                         квалификации
                     </p>
 
-                        <button type="button">9 900 руб</button>
+                        <button type="button"><div class="textButton">9 900 руб</div></button>
 
                 </li>
                 <li>
@@ -187,32 +195,32 @@
                         крафтового кваса
                     </p>
 
-                        <button type="button">9 900 руб</button>
+                        <button type="button"><div class="textButton">9 900 руб</div></button>
 
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <a href="#">1</a>
+            <ul class="pagination-list">
+                <li class="pagination-item">
+                  <a href="">1</a>
                 </li>
-                <li>
-                    <a href="#">2</a>
+                <li class="pagination-item">
+                  <a href="#">2</a>
                 </li>
-                <li>
-                    <a href="#">3</a>
+                <li class="pagination-item">
+                  <a href="#">3</a>
                 </li>
-                <li>
-                    <a href="#">Следующая</a>
+                <li class="pagination-item">
+                  <a href="#">Следующая</a>
                 </li>
             </ul>
         </section>
 
-        <section id="contacts">
+        <section class="contacts-box" id="contacts">
             <h6>NЁRDS DESIGN STUDIO</h6>
             <p>наб. Реки Карповки,<br>
               5 лит П, Санкт-Петербург<br>
               <a href="tel:+78005558628"></a>+7 800 555-86-28</p>
-                <button type="button">Напишите нам</button>
+                <button class="button-red" type="button">Напишите нам</button>
 
             <img src="img/map 1.png" width="1440" height="416" alt="">
             <img src="img/map-marker 1.png" width="231" height="190" alt="">
@@ -220,33 +228,41 @@
           </section>
 
         <footer>
+          <section class="main-footer">
+            <ul class="footer-social">
 
-              <section>
-                <ul>
-                  <li>
-                    <a href="#">Вконтакте
-                      <img src="img/vk-icon.png" width="81" height="81">
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">Фейсбук
-                      <img src="img/fb-icon.png" width="81" height="81">
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">Инстаграмм
-                      <img src="img/insta-icon.png" width="81" height="81">
-                    </a>
-                  </li>
-                </ul>
-              </section>
+              <li>
+                <div class="iconSocial circleBase">
+                  <a href="#">
+                    <img src="img/vk-icon.svg" width="26" height="15">
+                  </a>
+                </div>
+              </li>
 
-              <section>
-                <h8>Давайте дружить, это выгодно!</h8>
-                <p>Скидка 10% для друзей из социальных сетей.</p>
-              </section>
+              <li>
+                <div class="iconSocial circleBase">
+                  <a href="#">
+                    <img src="img/fb-icon.svg" width="12" height="22">
+                  </a>
+                </div>
+              </li>
 
-            </footer>
+              <li>
+                <div class="iconSocial circleBase">
+                  <a href="#">
+                    <img src="img/insta-icon.svg" width="21" height="21">
+                  </a>
+                </div>
+              </li>
+            </ul>
+          </section>
+
+
+          <section class="footer-goodbuy">
+            <h8>Давайте дружить, это выгодно!</h8>
+            <p>Скидка 10% для друзей из социальных сетей.</p>
+          </section>
+          </footer>
 
     </main>
 
