Гриды на главной странице

--- a/index.html
+++ b/index.html
@@ -140,10 +140,17 @@
     <section id="clients">
 
       <ul class="clients-list">
-        <li class="clients-logo"><img src="img/logo_htmlacademy 2.svg" width="199" height="57" alt="logo1">
-        <li class="clients-logo"><img src="img/logo-2 2.svg" width="209" height="90" alt="logo2"></li>
-        <li class="clients-logo"><img src="img/logo-3 2.svg" width="185" height="52" alt="logo3"></li>
-        <li class="clients-logo"><img src="img/logo-4 2.svg" width="173" height="84" alt="logo4"></li>
+        <li class="clients-logo">
+          <a href="#"><img src="img/logo_htmlacademy 2.svg" width="199" height="57" alt="logo1"></a>
+        <li class="clients-logo">
+          <a href="#"><img src="img/logo-2 2.svg" width="209" height="90" alt="logo2"></a>
+        </li>
+        <li class="clients-logo">
+          <a href="#"> <img src="img/logo-3 2.svg" width="185" height="52" alt="logo3"></a></li>
+        </li>
+        <li class="clients-logo">
+          <a href="#"><img src="img/logo-4 2.svg" width="173" height="84" alt="logo4"></a>
+        </li>
       </ul>
 
     </section>
