Флексы на главной странице

--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
     </section>
 
     <div class="about-columns">
-
       <section class="about-left" id="about">
         <h3 class="about-title">Мы — маленькая, но гордая<br>
           дизайн-студия из Краснодара.</h3>
-        <p class="about-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
           превыше креатива. Работаем не покладая рук, как роботы.</p>
         <br>
         <h5 class="about-title-list">Выполняем заказы на разработку:</h5>
@@ -113,27 +112,27 @@
 
       <section class="about-right">
         <img class="logo-new" src="img/nerds-illustration 1.png" width="360" height="208" alt="">
-        <h5 class="about-title-list">с 2004 года Любим точность во всем:</h5>
+
+        <h5 class="about-title-list-right">с 2004 года Любим точность во всем:</h5>
         <ul class="about-title-list2">
           <li>
-            <h6 class="number1">146</h6>
-            <p class="percent">%</p>
+            <div class="indicators"></div>
+            <h6 class="number1">146%</h6>
             <p>Уровень<br>
               самоотдачи</p>
           </li>
           <li>
-            <h6 class="number2">100</h6>
-            <p class="percent">%</p>
+            <h6 class="number2">100%</h6>
             <p>Соблюдение<br>
               сроков</p>
           </li>
           <li>
-            <h6 class="number3">50</h6>
-            <p class="percent">%</p>
+            <h6 class="number3">50%</h6>
             <p>Минимальная<br>
               предоплата</p>
           </li>
         </ul>
+
       </section>
     </div>
 
@@ -203,7 +202,26 @@
     </section>
 
   </footer>
+  <section>
+
+    <!--
+       <h2>
+         Напишите нам
+       </h2>
+
+       <form action="" method="post">
+         <label>Ваше имя </label>
+         <input type="text" placeholder="Имя Фамилия">
+         <br>
+         <label>Ваш email</label>
+         <input type="text" placeholder="email@example.com">
+         <br>
+         <label>Текст письма</label>
+         <textarea name="comments" cols="20" rows="4">В свободной форме</textarea>
+       </form>
+       -->
 </div>
+
 </body>
 
 </html>
