--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="main-header">
 
     <div class="main-header-logo">
-      <a>
+      <a href="index.html">
         <img src="img/nerds-logo.svg" width="160" height="65" alt="logotype">
       </a>
     </div>
@@ -37,14 +37,14 @@
   </header>
 
   <main class="main-page">
-    <div class="index-columns">
+
 
       <!-- <h1>Дизайн-студия Нёрдс</h1> -->
 
       <section class="main-slider-image">
         <figure>
           <a href="#"></a>
-          <img src="img/nerds-index-slide1 1.png" width="1157" height="431">
+          <img src="img/nerds-index-slide1 1.png" width="1140" height="300">
         </figure>
       </section>
 
@@ -59,12 +59,10 @@
           скрупулезно.</h2>
         <p>Математически выверенный дизайн<br>
           для вашего сайта или мобильного приложения.</p>
-        <div class="textButton">
           <button class="button-red" type="button">Узнать больше
           </button>
-        </div>
       </section>
-    </div>
+
 
     <section class="services" id="shop">
       <ul class="services-list">
@@ -161,9 +159,6 @@
         <a class="contacts-phone" href="tel:+78005558628"></a>+7 800 555-86-28
       </p>
       <button class="button-red" type="button">Напишите нам</button>
-
-      <img src="img/map 1.png" width="1440" height="416" alt="">
-      <img src="img/map-marker 1.png" width="231" height="190" alt="">
 
     </section>
   </main>
