--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   </header>
   <div class="container">
     <section class="slider">
-      <div class="slider-controls">
-        <button class="current" type="button" area-label="Первый слайд"></button>
-        <button type="button" area-label="Второй слайд"></button>
-        <button type="button" area-label="Третий слайд"></button>
+      <div id="slider-controls" class="slider-controls">
+        <button class="current" type="button" aria-label="Первый слайд"></button>
+        <button type="button" aria-label="Второй слайд"></button>
+        <button type="button" aria-label="Третий слайд"></button>
       </div>
-      <ul>
+      <ul id="slider-content">
         <li class="slider-list-item slide-current">
           <div class="slider-content">
             <h2 class="slider-title">Долго, дорого, скрупулезно.</h2>
@@ -82,7 +82,6 @@
   </div>
 </div>
 
-<!-- fixme: REFACTORING HERE -->
 <section class="services  page-wrap" id="shop">
   <ul class="services-list">
     <li class="services-item">
@@ -120,9 +119,9 @@
     <br>
     <h5 class="about-title-list">Выполняем заказы на разработку:</h5>
     <ul class="about-list">
-      <li class="about-item">Веб-сайтов любой сложности</li>
-      <li class="about-item">Мобильных приложений для iOS и Android</li>
-      <li class="about-item"> Слайдшоу и видео для корпоративных презентаций</li>
+      <li>Веб-сайтов любой сложности</li>
+      <li>Мобильных приложений для iOS и Android</li>
+      <li> Слайдшоу и видео для корпоративных презентаций</li>
     </ul>
   </section>
 
@@ -132,7 +131,6 @@
     <h5 class="about-title-list-right">с 2004 года Любим точность во всем:</h5>
     <ul class="about-title-list2">
       <li>
-        <div class="indicators"></div>
         <h6 class="number1">146%</h6>
         <p>Уровень<br>
           самоотдачи</p>
@@ -175,8 +173,35 @@
       5 лит П, Санкт-Петербург<br>
       <a class="contacts-phone" href="tel:+78005558628"></a>+7 800 555-86-28
     </p>
-    <button class="button-red" type="button">Напишите нам</button>
+    <a href="login.html" class="login-link"><button class="button-red " type="button">Напишите нам</button></a>
   </section>
+  <div id="modal-login" class="modal-hidden">
+    <form action="get" method="post" class="form-contact">
+      <div class="FormFirstRow">
+        <h1>Напишите нам</h1>
+        <div class="close">
+          <a href="#" id="modal-close"> <img src="img/close-cross.png"></a>
+        </div>
+      </div>
+      <ul>
+        <div class="secondRow">
+          <li>
+            <label for="name">Ваше имя:</label> <br>
+            <input type="text" id="name" name="user_name" placeholder="Имя Фамилия">
+          </li>
+          <li>
+            <label for="mail">Ваш e-mail:</label> <br>
+            <input type="email" id="mail" name="user_mail" placeholder="email@example.com ">
+          </li>
+        </div>
+        <li>
+          <label for="msg">Текст письма:</label> <br>
+          <textarea id="msg" name="user_message" placeholder="В свободной форме"></textarea>
+        </li>
+      </ul>
+      <button class="button-form">Отправить</button>
+    </form>
+  </div>
 </div>
 
 <footer class="footer page-wrap">
@@ -211,6 +236,8 @@
 
   </section>
 </footer>
+<script src="./js/contacts.js" type="text/javascript"></script>
+<script src="./js/slider.js" type="text/javascript"></script>
 </body>
 </html>
 
