--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru" xmlns="http://www.w3.org/1999/html">
+<html class="page" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8">
   <title>Нёрдс</title>
@@ -153,10 +153,10 @@
           <li>
             <div class="templates-content">
               <div class="browser-image">
-                <img src="img/browser.png">
+                <img src="img/browser.png" width="360" height="40" alt="Декор">
               </div>
               <div class="templates-image">
-                <img src="img/img-sedona 1.png" width="359" height="578" alt="Шаблон Седона">
+                <img src="img/img-sedona-1.png" width="359" height="578" alt="Шаблон Седона">
               </div>
               <div class="templates-text">
                 <h3>Sedona</h3>
@@ -164,104 +164,92 @@
                   Информационный сайт <br>
                   для туристов
                 </p>
-                <button type="button">
-                  <div class="textButton">9 900 р</div>
-                </button>
+                <button type="button" class="textButton">9 900 р</button>
               </div>
             </div>
           </li>
           <li>
             <div class="templates-content">
               <div class="browser-image">
-                <img src="img/browser.png">
+                <img src="img/browser.png" width="360" height="40" alt="Декор">
               </div>
               <div class="templates-image">
-                <img src="img/img-pink%201.png" width="359" height="578" alt="Шаблон Седона">
+                <img src="img/img-pink-1.png" width="359" height="578" alt="Шаблон Пинк">
               </div>
               <div class="templates-text">
                 <h3>Pink App</h3>
                 <p>
                   Продуктовый лендинг <br> приложения для iOS и Android
                 </p>
-                <button type="button">
-                  <div class="textButton">9 900 р</div>
-                </button>
+                <button type="button" class="textButton"> 9 900 р </button>
               </div>
             </div>
           </li>
           <li>
             <div class="templates-content">
               <div class="browser-image">
-                <img src="img/browser.png">
+                <img src="img/browser.png" width="360" height="40" alt="Декор">
               </div>
               <div class="templates-image">
-                <img src="img/img-barbershop%201.png" width="359" height="578" alt="Шаблон Седона">
+                <img src="img/img-barbershop-1.png" width="359" height="578" alt="Шаблон Барбершоп">
               </div>
               <div class="templates-text">
                 <h3>Barbershop</h3>
                 <p>
                   Сайт салона красоты.<br>Для мужчин, да.
                 </p>
-                <button type="button">
-                  <div class="textButton">9 900 р</div>
-                </button>
+                <button type="button" class="textButton">9 900 р</button>
               </div>
             </div>
           </li>
           <li>
             <div class="templates-content">
               <div class="browser-image">
-                <img src="img/browser.png">
+                <img src="img/browser.png" width="360" height="40" alt="Декор">
               </div>
               <div class="templates-image">
-                <img src="img/img-mishka%201.png" width="359" height="578" alt="Шаблон Седона">
+                <img src="img/img-mishka-1.png" width="359" height="578" alt="Шаблон Мишка">
               </div>
               <div class="templates-text">
                 <h3>MISHKA</h3>
                 <p>
                   Интернет-магазин <br> вязаных игрушек
                 </p>
-                <button type="button">
-                  <div class="textButton">9 900 р</div>
-                </button>
+                <button type="button" class="textButton">9 900 р</button>
               </div>
             </div>
           </li>
           <li>
             <div class="templates-content">
               <div class="browser-image">
-                <img src="img/browser.png">
+                <img src="img/browser.png" width="360" height="40" alt="Декор">
               </div>
               <div class="templates-image">
-                <img src="img/img-aplus%201.png" width="359" height="578" alt="Шаблон Седона">
+                <img src="img/img-aplus-1.png" width="359" height="578" alt="Шаблон Аплус">
               </div>
               <div class="templates-text">
                 <h3>A Plus</h3>
                 <p>
                   Лендинг курсов повышения <br>квалификации
                 </p>
-                <button type="button">
-                  <div class="textButton">9 900 р</div>
-                </button>
+                <button type="button" class="textButton">9 900 р</button>
               </div>
             </div>
           </li>
           <li>
             <div class="templates-content">
               <div class="browser-image">
-                <img src="img/browser.png">
+                <img src="img/browser.png" width="360" height="40" alt="Декор">
               </div>
               <div class="templates-image">
-                <img src="img/img-kvast%201.png" width="359" height="578" alt="Шаблон Седона">
+                <img src="img/img-kvast-1.png" width="359" height="578" alt="Шаблон Кваст">
               </div>
               <div class="templates-text">
                 <h3>КВАСТ</h3>
                 <p>
                   Промо-сайт производителя <br> крафтового кваса
                 </p>
-                <button type="button">
-                  <div class="textButton">9 900 р</div>
-                </button>
+                <button type="button" class="textButton">9 900 р</button>
               </div>
             </div>
           </li>
@@ -295,7 +283,7 @@
         5 лит П, Санкт-Петербург<br>
         <a class="contacts-phone" href="tel:+78005558628"></a>+7 800 555-86-28
       </p>
-      <a href="login.html" class="login-link"><button class="button-red " type="button">Напишите нам</button></a>
+      <a href="login.html" class="login-link"><button class="button-red" type="button">Напишите нам</button></a>
     </section>
 
     <div id="modal-login" class="modal-hidden">
@@ -303,7 +291,7 @@
         <div class="FormFirstRow">
           <h1>Напишите нам</h1>
           <div class="close">
-            <a href="#" id="modal-close"> <img src="img/close-cross.png"></a>
+            <a href="#" id="modal-close"> <img src="img/close-cross.png" alt="Закрыть"></a>
           </div>
         </div>
         <ul>
@@ -335,21 +323,21 @@
       <li>
         <div class="iconSocial circleBase">
           <a href="#">
-            <img src="img/vk-icon.svg" width="26" height="15">
+            <img src="img/vk-icon.svg" width="26" height="15" alt="Вконтакте иконка">
           </a>
         </div>
       </li>
       <li>
         <div class="iconSocial circleBase">
           <a href="#">
-            <img src="img/fb-icon.svg" width="12" height="22">
+            <img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук иконка">
           </a>
         </div>
       </li>
       <li>
         <div class="iconSocial circleBase">
           <a href="#">
-            <img src="img/insta-icon.svg" width="21" height="21">
+            <img src="img/insta-icon.svg" width="21" height="21" alt="Инстаграмм иконка">
           </a>
         </div>
       </li>
