--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a class="button-slide button current" href="#">Узнать больше</a>
           </div>
           <div class="slider-image">
-            <img src="img/nerds-index-slide1.png" alt="Долго, дорого, скрупулезно."/>
+            <img src="img/nerds-index-slide1.png" width="760" height="431" alt="Долго, дорого, скрупулезно."/>
           </div>
         </li>
         <li class="slider-list-item">
@@ -62,7 +62,7 @@
             <a class="button slide-button" href="#">Узнать больше</a>
           </div>
           <div class="slider-image">
-            <img src="img/nerds-index-slide2.png" alt="Долго, дорого, скрупулезно."/>
+            <img src="img/nerds-index-slide2.png" width="760" height="431" alt="Любим математику"/>
           </div>
         </li>
         <li class="slider-list-item">
@@ -74,7 +74,7 @@
             <a class="button slide-button" href="#">Узнать больше</a>
           </div>
           <div class="slider-image">
-            <img src="img/nerds-index-slide3.png" alt="Долго, дорого, скрупулезно."/>
+            <img src="img/nerds-index-slide3.png" width="760" height="431" alt="Только ночь, только хардкор"/>
           </div>
         </li>
       </ul>
@@ -85,7 +85,7 @@
 <section class="services  page-wrap" id="shop">
   <ul class="services-list">
     <li class="services-item">
-      <img src="img/illustration-1 1.jpg" width="300" height="146" alt="Картинка с веб-сайтом">
+      <img src="img/illustration-1-1.jpg" width="300" height="146" alt="Картинка с веб-сайтом">
       <h4>Веб-сайты</h4>
       <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
       <button class="button-red" type="button">
@@ -93,7 +93,7 @@
       </button>
     </li>
     <li class="services-item">
-      <img src="img/illustration-2 1.jpg" width="300" height="146" alt="Картинка с приложением">
+      <img src="img/illustration-2-1.jpg" width="300" height="146" alt="Картинка с приложением">
       <h4>Приложения</h4>
       <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
       <button class="button-green" type="button">
@@ -101,7 +101,7 @@
       </button>
     </li>
     <li class="services-item">
-      <img src="img/illustration-3 1.jpg" width="300" height="146" alt="Картинка с презентацией">
+      <img src="img/illustration-3-1.jpg" width="300" height="146" alt="Картинка с презентацией">
       <h4>Презентации</h4>
       <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
       <button class="button-yellow" type="button">
@@ -126,7 +126,7 @@
   </section>
 
   <section class="about-right">
-    <img class="logo-new" src="img/nerds-illustration 1.png" width="360" height="208" alt="">
+    <img class="logo-new" src="img/nerds-illustration-1.png " width="360" height="208" alt="Лого">
 
     <h5 class="about-title-list-right">с 2004 года Любим точность во всем:</h5>
     <ul class="about-title-list2">
@@ -153,15 +153,15 @@
 
   <ul class="clients-list">
     <li class="clients-logo clients-logo1">
-      <a href="#"><img src="img/logo_htmlacademy 2.svg" width="199" height="57" alt="logo1"></a>
+      <a href="#"><img src="img/logo_htmlacademy-2.svg" width="199" height="57" alt="logo1"></a>
     <li class="clients-logo clients-logo2">
-      <a href="#"><img src="img/logo-2 2.svg" width="209" height="90" alt="logo2"></a>
+      <a href="#"><img src="img/logo-2-2.svg" width="209" height="90" alt="logo2"></a>
     </li>
     <li class="clients-logo clients-logo3">
-      <a href="#"> <img src="img/logo-3 2.svg" width="185" height="52" alt="logo3"></a></li>
+      <a href="#"> <img src="img/logo-3-2.svg" width="185" height="52" alt="logo3"></a>
     </li>
     <li class="clients-logo clients-logo4">
-      <a href="#"><img src="img/logo-4 2.svg" width="173" height="84" alt="logo4"></a>
+      <a href="#"><img src="img/logo-4-2.svg" width="173" height="84" alt="logo4"></a>
     </li>
   </ul>
 </section>
@@ -210,21 +210,21 @@
       <li>
         <div class="iconSocial circleBase">
           <a href="#">
-            <img src="img/vk-icon.svg" width="26" height="15">
+            <img src="img/vk-icon.svg" width="26" height="15" alt="Вконтакте иконка">
           </a>
         </div>
       </li>
       <li>
         <div class="iconSocial circleBase">
           <a href="#">
-            <img src="img/fb-icon.svg" width="12" height="22">
+            <img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук иконка">
           </a>
         </div>
       </li>
       <li>
         <div class="iconSocial circleBase">
           <a href="#">
-            <img src="img/insta-icon.svg" width="21" height="21">
+            <img src="img/insta-icon.svg" width="21" height="21" alt="Инстаграмм иконка">
           </a>
         </div>
       </li>
